# weather

./: .gitignore  README.md  pyproject.toml
temp/: test_weather.ipynb
weather/: __init__.py  __main__.py  cli.py  get_weather_metric.py
